add update wallet endpoint
