# swagger/swagger.yaml
@@ -91,6 +91,25 @@ definitions:
     - walletAddress
     title: 'Mediatype identifier: application/vnd.wallet+json; view=default'
     type: object
+  WalletPayload:
+    description: Wallet payload
+    example:
+      cognitoAuthUserId: Et non.
+      walletAddress: Corporis aut ullam.
+    properties:
+      cognitoAuthUserId:
+        description: Cognito auth user ID
+        example: Et non.
+        type: string
+      walletAddress:
+        description: Wallet address
+        example: Corporis aut ullam.
+        type: string
+    required:
+    - cognitoAuthUserId
+    - walletAddress
+    title: WalletPayload
+    type: object
 host: localhost:5000
 info:
   description: A simple goa service
@@ -214,6 +233,41 @@ paths:
       schemes:
       - http
       summary: show wallet
+      tags:
+      - wallet
+    post:
+      description: Update user wallet
+      operationId: wallet#update
+      parameters:
+      - description: Wallet payload
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/WalletPayload'
+      produces:
+      - application/standard_error+json
+      - text/plain
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/Standard_error'
+        "404":
+          description: Not Found
+        "410":
+          description: Gone
+          schema:
+            $ref: '#/definitions/Standard_error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/Standard_error'
+      schemes:
+      - http
+      summary: update wallet
       tags:
       - wallet
 produces:
